--- a/web/index.html
+++ b/web/index.html
@@ -18,16 +18,31 @@
           <div class="one"><a href="#" class="strong uppercase">Plans</a><span class="muted hidden-xs">&nbsp;(trial expires in 3 days)</span>
           </div>
           <div class="one">
-            <a href="#" class="nd-roundimage-wrap"><img width="50" heigth="50" src="https://pp.vk.me/c620226/v620226565/2af2/YyPefK3nt7k.jpg" />
-            </a>
+            <div class="drop-menu">
+              <div class="drop-fade"></div>
+              <div class="drop-trigger">
+                <a href="#" class="nd-roundimage-wrap"><img width="50" heigth="50" src="https://pp.vk.me/c620226/v620226565/2af2/YyPefK3nt7k.jpg" />
+                </a>
+              </div>
+              <div class="drop-content">
+                <a href="#" class="drop-content-one">
+                  <div class="icon purple ic-not-spam"></div><span>Not spam</span>
+                </a>
+                <a href="#" class="drop-content-one">
+                  <div class="icon purple ic-blocked"></div><span>Block user</span>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </header>
     <div class="gridwrap" id="content">
       <aside class="sidebar">
-        <div class="nd-switcher-wrap can-animate active">
-          <div class="bg-accent">
+        <div class="nd-switcher-wrap can-animate w-guide active">
+          <div class="bg-accent nd-guided">
+            <!--.nd-guide.second<div class="nd-guide-head">Turn on the Cleaner</div><div class="muted">To begin cleaning spam from your Instagram, please turn on the Cleaner.</div><button class="btn rounded">Got it-->
+            </button>
             <div class="container nd-switcher">
               <div class="nd-switcher-label"><span class="nd-switcher-heading">Cleaner</span><span class="nd-switcher-status"><span class="on">Running</span><span class="off">Stopped</span></span>
               </div>
@@ -55,7 +70,9 @@
                 </div>
               </div>
             </div>
-            <div class="one can-animate unactive">
+            <div class="one can-animate unactive nd-guided">
+              <!--.nd-guide.second<div class="nd-guide-head">Turn on the Cleaner</div><div class="muted">To begin cleaning spam from your Instagram, please turn on the Cleaner.</div><button class="btn rounded">Got it-->
+              </button>
               <div class="container">
                 <div class="nd-switcher-label"><span class="letter green">F</span>
                   <div class="heading"><span>Fpam filter</span>
