--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,9 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="logo"><img src="images/logo.svg" />
+        <div class="logo">
+          <a href="index.html"><img src="images/logo.svg" />
+          </a>
         </div>
         <div class="nd-right-nav">
           <div class="one"><a href="#" class="strong uppercase">Plans</a><span class="muted hidden-xs">&nbsp;(trial expires in 3 days)</span>
@@ -41,8 +43,11 @@
       <aside class="sidebar">
         <div class="nd-switcher-wrap can-animate w-guide active">
           <div class="bg-accent nd-guided">
-            <!--.nd-guide.second<div class="nd-guide-head">Turn on the Cleaner</div><div class="muted">To begin cleaning spam from your Instagram, please turn on the Cleaner.</div><button class="btn rounded">Got it-->
-            </button>
+            <div class="nd-guide first">
+              <div class="nd-guide-head">Turn on the Cleaner</div>
+              <div class="muted">To begin cleaning spam from your Instagram, please turn on the Cleaner.</div>
+              <button class="btn rounded">Got it</button>
+            </div>
             <div class="container nd-switcher">
               <div class="nd-switcher-label"><span class="nd-switcher-heading">Cleaner</span><span class="nd-switcher-status"><span class="on">Running</span><span class="off">Stopped</span></span>
               </div>
@@ -71,8 +76,11 @@
               </div>
             </div>
             <div class="one can-animate unactive nd-guided">
-              <!--.nd-guide.second<div class="nd-guide-head">Turn on the Cleaner</div><div class="muted">To begin cleaning spam from your Instagram, please turn on the Cleaner.</div><button class="btn rounded">Got it-->
-              </button>
+              <div hidden="hidden" class="nd-guide second">
+                <div class="nd-guide-head">Turn on the Cleaner</div>
+                <div class="muted">To begin cleaning spam from your Instagram, please turn on the Cleaner.</div>
+                <button class="btn rounded">Got it</button>
+              </div>
               <div class="container">
                 <div class="nd-switcher-label"><span class="letter green">F</span>
                   <div class="heading"><span>Fpam filter</span>
