--- a/web/index.html
+++ b/web/index.html
@@ -874,7 +874,9 @@
       </div>
     </footer>
     <div class="popups">
-      <div class="popups-fade"></div>
+      <div class="popups-fade">
+        <div class="popup-close icon purple ic-close"></div>
+      </div>
       <div class="popup-one popup-photo">
         <div class="popup-image"><img src="images/square.jpg" />
         </div>
@@ -883,8 +885,6 @@
           </div>
           <div class="nd-cleaned-one">
             <div href="#" class="nd-roundimage-wrap"><img width="50" heigth="50" src="https://pp.vk.me/c620226/v620226565/2af2/YyPefK3nt7k.jpg" />
-              <div class="nd-cleaned-post"><img src="https://pp.vk.me/c625618/v625618565/37729/2YrxnaN4dNg.jpg" />
-              </div>
             </div>
             <div class="nd-cleaned-one-details">
               <div class="drop-menu">
@@ -907,8 +907,6 @@
           </div>
           <div class="nd-cleaned-one">
             <div href="#" class="nd-roundimage-wrap"><img width="50" heigth="50" src="https://pp.vk.me/c620226/v620226565/2af2/YyPefK3nt7k.jpg" />
-              <div class="nd-cleaned-post"><img src="https://pp.vk.me/c625618/v625618565/37771/QszaMfxEFqw.jpg" />
-              </div>
             </div>
             <div class="nd-cleaned-one-details">
               <div class="drop-menu">
