expired + landing init

--- a/web/expired.html
+++ b/web/expired.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic-ext,latin-ext,latin' rel='stylesheet' type='text/css'>
 
-  <body>
+  <body class="trial-expired">
     <header class="header">
       <div class="container">
         <div class="logo">
@@ -936,6 +936,14 @@
     <div class="nd-message"><span>The comment has been cleaned.</span><a href="#" class="close">&#32;UNDO</a>
     </div>
   </body>
+  <div class="popup-expired-wrap">
+    <div class="popup-expired"><img src="images/logo.svg" />
+      <div class="exp-heading">Your trial has expired.</div>
+      <div class="muted">Your week of free use has expired. If you liked Gromoboy and would like to continue using it, please subscribe to one of our monthly plans.</div>
+      <button class="btn rounded purple">I want to use gromoboy</button>
+      <button class="btn rounded">log out</button>
+    </div>
+  </div>
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="js/plugins.min.js"></script>
   <script src="js/script.js"></script>
