--- a/web/landing.html
+++ b/web/landing.html
@@ -9,28 +9,189 @@
   <link rel="stylesheet" href="css/style.css" />
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic-ext,latin-ext,latin' rel='stylesheet' type='text/css'>
 
-  <body class="bg-white">
-    <header class="header unfixed landing">
+  <body class="landing">
+    <header class="header unfixed">
       <div class="container">
         <div class="logo logo-wtext"><img src="images/logo-text.svg" />
         </div>
+        <div class="logo logo-simple"><img src="images/logo.svg" />
+        </div>
         <div class="nd-right-nav">
           <div class="one">
-            <div class="btn instalogin">Login</div>
+            <button class="btn purple instalogin"><img src="images/insta.svg" /><span>Log in</span>
+            </button>
           </div>
         </div>
       </div>
     </header>
-    <div id="content"></div>
-    <div class="container">
-      <footer class="footer normal-footer">
-        <div class="footer-el"><a href="#">About</a>
+    <div id="content">
+      <div class="container">
+        <div class="tcenter">
+          <h2>Gromoboy keep your Instagram clean of spam.</h2>
+          <p class="plans-text">We have developed a unique technology which finds and removes all spam from your Instagram account. Our robots work 24 hours a day to deliver you the best possible service.</p>
         </div>
-        <div class="footer-el"><a href="#">Contacts</a>
+        <div class="nd-mobile-bafter">
+          <div class="nd-name">Before</div><img src="images/bafter.png" />
         </div>
-        <div class="footer-el"><a href="#">FAQ</a>
+        <div class="nd-mobile-bafter">
+          <div class="nd-name">After</div><img src="images/bafter2.png" />
         </div>
-      </footer>
+        <div class="last"></div>
+        <div class="nd-tablet-bafter">
+          <div class="nd-names">
+            <div class="nd-name">Before</div>
+            <div class="nd-name">After</div>
+          </div>
+          <div class="juxtapose nd-tablet-bafter"> <img src="images/bafter.png" /> <img src="images/bafter2.png" />
+          </div>
+        </div>
+      </div>
+      <div class="nd-benefits">
+        <div class="container">
+          <div class="nd-benefits-one">
+            <div class="nd-image"><img src="images/detection.svg" />
+            </div>
+            <div class="nd-head">Unique detection algoritms</div>
+            <div class="nd-desc">Feature text that shows how cool our service is and things like that.</div>
+          </div>
+          <div class="nd-benefits-one">
+            <div class="nd-image"><img src="images/spam.svg" />
+            </div>
+            <div class="nd-head">Spam filters</div>
+            <div class="nd-desc">Feature text that shows how cool our service is and things like that.</div>
+          </div>
+          <div class="nd-benefits-one">
+            <div class="nd-image"><img src="images/manual.svg" />
+            </div>
+            <div class="nd-head">Manual mode</div>
+            <div class="nd-desc">Feature text that shows how cool our service is and things like that.</div>
+          </div>
+        </div>
+      </div>
+      <div class="container section cleaner-digits">
+        <div class="tcenter">
+          <h2>Turn on the Cleaner and see up to 97% less spam.</h2>
+          <p class="plans-text">We have developed a unique technology which finds and removes all spam from your Instagram account. Our robots work 24 hours a day to deliver you the best possible service.</p>
+          <button class="btn purple instalogin"><img src="images/insta.svg" /><span>Log in with Instagram</span>
+          </button>
+        </div>
+        <div class="lessspam"><img src="images/lessspam.svg" />
+        </div>
+      </div>
+      <div class="bg-white section">
+        <div class="container tcenter">
+          <h2>Choose what types of spam to clean.</h2>
+          <p class="plans-text">We have developed a unique technology which finds and removes all spam from your Instagram account. Our robots work 24 hours a day to deliver you the best possible service.</p>
+          <div class="nd-clean-types">
+            <div class="nd-cleantype-group">
+              <div class="nd-clean-head purple">CLEAN LINKS</div>
+              <div class="nd-clean-types-one">
+                <div class="nd-comment-block"><img src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-19/s150x150/11417457_1469158620065371_951600879_a.jpg" />
+                  <div class="nd-comment">
+                    <div class="hoursago">1h</div>
+                    <div class="name">@justice</div>
+                    <div class="comment">Guys check this out! <a>https://en.wikipedia.org/wiki/Marin...</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="nd-cleantype-group">
+              <div class="nd-clean-head green">Clean flood</div>
+              <div class="nd-clean-types-one">
+                <div class="nd-comment-block"><img src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-19/s150x150/11417457_1469158620065371_951600879_a.jpg" />
+                  <div class="nd-comment">
+                    <div class="hoursago">1h</div>
+                    <div class="name">@justice</div>
+                    <div class="comment">Nice photo! <a>&#35;followforfollow</a>
+                      <br /><a>&#35;likeforlike</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="nd-cleantype-group">
+              <div class="nd-clean-head blue">CLEAN FOREIGN SPAM</div>
+              <div class="nd-clean-types-one">
+                <div class="nd-comment-block"><img src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-19/s150x150/11417457_1469158620065371_951600879_a.jpg" />
+                  <div class="nd-comment">
+                    <div class="hoursago">28m</div>
+                    <div class="name">@justice</div>
+                    <div class="comment">Guys check this out! <a>https://en.wikipedia.org/wiki/Marin...</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="nd-cleantype-group">
+              <div class="nd-clean-head red">CLEAN FILTHY COMMENTS</div>
+              <div class="nd-clean-types-one">
+                <div class="nd-comment-block"><img src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-19/s150x150/11417457_1469158620065371_951600879_a.jpg" />
+                  <div class="nd-comment">
+                    <div class="hoursago">1h</div>
+                    <div class="name">@justice</div>
+                    <div class="comment">Guys check this out! <a>https://en.wikipedia.org/wiki/Marin...</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="container cleaner-robots">
+          <div class="tcenter">
+            <h2>Clean the spam manually if you need to.</h2>
+            <p class="plans-text">Feature text that shows how cool our service is and things like that and here is the third line hello. Here comes the third line which also explains how spam will be cleaned.</p>
+          </div>
+          <div class="im-robots"><img src="images/img-robots.svg" />
+          </div>
+        </div>
+      </div>
+      <div class="section bg-purple tcenter">
+        <h2>Our stats for the last week</h2>
+        <div class="nd-stats">
+          <div class="nd-stats-one">
+            <div class="nd-count">12,296</div>
+            <div class="nd-label">comments cleaned</div>
+          </div>
+          <div class="nd-stats-one">
+            <div class="nd-count">1,296</div>
+            <div class="nd-label">spammers blocked</div>
+          </div>
+          <div class="nd-stats-one">
+            <div class="nd-count">459</div>
+            <div class="nd-label">users joined</div>
+          </div>
+        </div>
+      </div>
+      <div class="bg-white">
+        <div class="container section cleaner-digits nd-gift">
+          <div class="tcenter">
+            <h2>Start your <span class="red">week of free use&nbsp;</span>to explore Gromoboy.</h2>
+            <p class="plans-text">Feature text that shows how cool our service is and things like that and here is the third line hello. Here comes the third line which also explains. <a href="#prices">See prices&nbsp;</a>after a week of free use.</p>
+            <button class="btn purple instalogin"><img src="images/insta.svg" /><span>Log in with Instagram</span>
+            </button>
+          </div>
+          <div class="lessspam"><img src="images/img-gift.svg" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bg-white">
+      <div class="container">
+        <footer class="footer normal-footer">
+          <div class="footer-el"><a href="/">GROMOBOY © 2015</a>
+          </div>
+          <div class="footer-el"><a href="#">About</a>
+          </div>
+          <div class="footer-el"><a href="#">Contacts</a>
+          </div>
+          <div class="footer-el"><a href="#">FAQ</a>
+          </div>
+        </footer>
+      </div>
     </div>
   </body>
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
